Fixed alignment

--- a/sass/components/_article.scss
+++ b/sass/components/_article.scss
@@ -48,6 +48,7 @@
         }
         &__social {
             width: 100%;
+            margin: 0;
         }
     }
 }
