--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -2,7 +2,7 @@
     background-color: $color-dark-green;
     height: 400px;
     width: 310px;
-    margin: 0 .5rem;
+    margin: .5rem .5rem;
     padding: 3rem;
     color: $color-light-text;
     
